# LightweightSLAM

./: CMakeLists.txt
cmake_modules/: FindG2O.cmake
src/: main.cpp
src/camera/: AstraRgbdCamera.cpp  AstraRgbdCamera.h  OpenNI2Camera.cpp  OpenNI2Camera.h  astra_rgbd_camera.cpp  openni2_camera.cpp
src/core/: ceres_problems.cpp  ceres_problems.h  common_include.h  feature_tracker.cpp  feature_tracker.h  frame.cpp  frame.h  g2o_solvers.cpp  g2o_solvers.h  map.cpp  map.h  map_point.cpp  map_point.h  pinhole_camera_model.cpp  pinhole_camera_model.h  system.cpp  system.h  viewer.cpp  viewer.h
